; ModuleID = '/home/carl/AnghaBench/mongoose/test/extr_unit_test.c_cb3_big.c'
source_filename = "/home/carl/AnghaBench/mongoose/test/extr_unit_test.c_cb3_big.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mg_connection = type { i32 }
%struct.websocket_message = type { i64, i8* }

@MG_EV_WEBSOCKET_FRAME = common dso_local global i32 0, align 4
@WEBSOCKET_OP_TEXT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@.str.1 = private unnamed_addr constant [8 x i8] c"success\00", align 1
@.str.2 = private unnamed_addr constant [5 x i8] c"fail\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.mg_connection*, i32, i8*)* @cb3_big to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cb3_big(%struct.mg_connection* %0, i32 %1, i8* %2) #0 {
  %4 = alloca %struct.mg_connection*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca %struct.websocket_message*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  store %struct.mg_connection* %0, %struct.mg_connection** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = bitcast i8* %10 to %struct.websocket_message*
  store %struct.websocket_message* %11, %struct.websocket_message** %7, align 8
  %12 = load i32, i32* %5, align 4
  %13 = load i32, i32* @MG_EV_WEBSOCKET_FRAME, align 4
  %14 = icmp eq i32 %12, %13
  br i1 %14, label %15, label %44

15:                                               ; preds = %3
  store i32 1, i32* %8, align 4
  store i64 0, i64* %9, align 8
  br label %16

16:                                               ; preds = %33, %15
  %17 = load i64, i64* %9, align 8
  %18 = load %struct.websocket_message*, %struct.websocket_message** %7, align 8
  %19 = getelementptr inbounds %struct.websocket_message, %struct.websocket_message* %18, i32 0, i32 0
  %20 = load i64, i64* %19, align 8
  %21 = icmp ult i64 %17, %20
  br i1 %21, label %22, label %36

22:                                               ; preds = %16
  %23 = load %struct.websocket_message*, %struct.websocket_message** %7, align 8
  %24 = getelementptr inbounds %struct.websocket_message, %struct.websocket_message* %23, i32 0, i32 1
  %25 = load i8*, i8** %24, align 8
  %26 = load i64, i64* %9, align 8
  %27 = getelementptr inbounds i8, i8* %25, i64 %26
  %28 = load i8, i8* %27, align 1
  %29 = sext i8 %28 to i32
  %30 = icmp ne i32 %29, 120
  br i1 %30, label %31, label %32

31:                                               ; preds = %22
  store i32 0, i32* %8, align 4
  br label %36

32:                                               ; preds = %22
  br label %33

33:                                               ; preds = %32
  %34 = load i64, i64* %9, align 8
  %35 = add i64 %34, 1
  store i64 %35, i64* %9, align 8
  br label %16

36:                                               ; preds = %31, %16
  %37 = load %struct.mg_connection*, %struct.mg_connection** %4, align 8
  %38 = load i32, i32* @WEBSOCKET_OP_TEXT, align 4
  %39 = load i32, i32* %8, align 4
  %40 = icmp ne i32 %39, 0
  %41 = zext i1 %40 to i64
  %42 = select i1 %40, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0)
  %43 = call i32 @mg_printf_websocket_frame(%struct.mg_connection* %37, i32 %38, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i8* %42)
  br label %44

44:                                               ; preds = %36, %3
  ret void
}

declare dso_local i32 @mg_printf_websocket_frame(%struct.mg_connection*, i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
